# KungFuChess

./: .gitignore  CMakeLists.txt  Dockerfile.client  Dockerfile.server  README.md  build_docker.sh  run_clients.ps1
client/: main_client.cpp
client/network/: GameClient.cpp  GameClient.hpp
headers/: Game.hpp  GraphicsFactory.hpp  Physics.hpp
observer/: CMakeLists.txt  run_observer.ps1
observer/headers/: BaseEvent.hpp  BlackMovesTable.hpp  BlackScoreTracker.hpp  CaptureEvent.hpp  GameEventManager.hpp  GameStateEvent.hpp  MoveEvent.hpp  Observer.hpp  SoundManager.hpp  Subject.hpp  TimeEvent.hpp  VoiceAnnouncer.hpp  WhiteMovesTable.hpp  WhiteScoreTracker.hpp
observer/src/: BlackMovesTable.cpp  BlackScoreTracker.cpp  GameEventManager.cpp  ObserverDemo.cpp  SimpleDemo.cpp  SoundManager.cpp  TemplateInstantiations.cpp  VoiceAnnouncer.cpp  WhiteMovesTable.cpp  WhiteScoreTracker.cpp
pieces/PB/states/move/: config.json
scripts/: build.ps1  run.ps1
server/: main_server.cpp
server/network/: GameServer.cpp  GameServer.hpp  GameServerLogic.cpp
shared/core/: Board.hpp  Game.cpp  Game.hpp  Physics.hpp  Piece.hpp
shared/game_logic/: CaptureRules.cpp  Moves.hpp  PieceFactory.hpp
shared/graphics/: Graphics.hpp  GraphicsFactory.hpp
shared/graphics/img/: OpenCvImg.cpp
shared/network/: NetworkInterface.hpp
shared/observer/: CMakeLists.txt  README.md  README_NEW.md  run.ps1  run_observer_simple.ps1  run_simple.ps1
shared/observer/headers/: BlackMovesTable.hpp  BlackScoreTracker.hpp  CaptureEvent.hpp  GameStateEvent.hpp  SoundManager.hpp  Subject.hpp  VoiceAnnouncer.hpp
shared/observer/src/: TemplateInstantiations.cpp  WhiteMovesTable.cpp
shared/utils/json/nlohmann/: json.hpp
sounds/: README.md
src/: Board.cpp  Common.hpp  Game.cpp  Game.hpp  Graphics.cpp  Moves.cpp  Physics.hpp  PhysicsFactory.hpp  PieceFactory.hpp  main.cpp  main_client.cpp  main_server.cpp
src/core/: Game.cpp  Game.hpp  State.hpp
src/game_logic/: CaptureRules.hpp  PhysicsFactory.hpp
src/graphics/img/: OpenCvImg.cpp  OpenCvImg.hpp
src/network/: GameClient.cpp  GameClient.hpp  GameServer.cpp  GameServer.hpp  NetworkInterface.hpp
tests/: MockFactories.hpp  README.md  catch_placeholder.hpp  debug_test.cpp  test_board.cpp  test_capture_rules.cpp  test_command.cpp  test_factories.cpp  test_game.cpp  test_game_full.cpp  test_graphics.cpp  test_img_full.cpp  test_main.cpp  test_moves.cpp  test_observer_pattern.cpp  test_opencv_img.cpp  test_physics.cpp  test_piece.cpp  test_sound_mock.cpp  test_state.cpp
